[build-system]
requires = [
    "setuptools>=65.5.0",
    "wheel>=0.37.1",
    "setuptools_scm[toml]>=7.0.5",
    "numpy<1.24.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyscf-ac0"
description = "Interface to and port of fragments of GAMMCOR code developed by Pernal group at Lodz University of Technology"
readme = "README.md"
requires-python = ">=3.9, <3.12"
license = { file = "LICENSE" }
dependencies = [
    "pyscf==2.4.0",
    "numpy<1.24.0",
]
dynamic = ["version"]

[project.scripts]
rdm_ac0 = "pyscf.cas_ac0._cli:rdm_ac0"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pyscf*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.pye"]

[tool.setuptools_scm]
version_scheme = 'no-guess-dev'
write_to = "pyscf/cas_ac0/version.py"
git_describe_command = 'git describe --dirty --tags --long --match "*[0-9]*" --abbrev=14'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rfExX --disable-warnings -v -m 'not slow' -q --doctest-modules"
testpaths = [
    "tests",
]
cache_dir = ".pytest_cache"
doctest_optionflags = "NUMBER"