[build-system]
requires = ["scikit-build-core", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "pyscf-ac0"
description = "Interface to and port of fragments of GAMMCOR code developed by Pernal group at Lodz University of Technology"
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = { file = "LICENSE" }
dependencies = [
    "pyscf>=2.4.0",
    "numpy",
]
dynamic = ["version"]

[project.scripts]
rdm_ac0 = "pyscf.cas_ac0._cli:rdm_ac0"

[tool.scikit-build]
minimum-version = "0.9"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = [ "src/pyscf/cas_ac0/_version.py" ]
wheel.exclude = ["*.f90"]
wheel.packages = ["src/pyscf"]

[tool.setuptools_scm]
version_scheme = 'no-guess-dev'
write_to = "src/pyscf/cas_ac0/_version.py"
git_describe_command = 'git describe --dirty --tags --long --match "*[0-9]*" --abbrev=14'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rfExX --disable-warnings -v -m 'not slow' -q --doctest-modules"
testpaths = [
    "tests",
]
cache_dir = ".pytest_cache"
doctest_optionflags = "NUMBER"
